Fix issues with expand / collapse - #259 and #260

--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineCollapser.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineCollapser.css
@@ -15,9 +15,14 @@ limitations under the License.
 */
 
 .TimelineCollapser {
-  float: right;
-  margin: 0 0.8rem 0 0;
-  display: inline-block;
+  align-items: center;
+  display: flex;
+  flex: none;
+  justify-content: center;
+}
+
+.TimelineCollapser--tooltipTitle {
+  white-space: pre;
 }
 
 .TimelineCollapser--btn,
